# slint-mcu-rust-template

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
ui/: appwindow.slint
