[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slint = { version = "1.0.0", default-features = false, features = ["compat-1-0"] }

# for the rp-pico, replace by the hal for your crate
rp-pico = { version = "0.5", optional = true }
cortex-m = { version = "0.7.6", optional = true }
cortex-m-rt = {version = "0.7.1", optional = true }
alloc-cortex-m = { version = "0.4.2", optional = true }
st7789 = { version = "0.7", optional = true }
shared-bus = { version = "0.2.4", optional = true }
panic-halt = { version = "0.2.0", optional = true }
display-interface-spi = { version = "0.4.1", optional = true }
embedded-graphics-core = { version = "0.3.3", optional = true }
embedded-hal = {version = "0.2.7", optional = true }
fugit = { version = "0.3.6", optional = true }

[build-dependencies]
slint-build = { version = "1.0.0" }


[features]
simulator = ["slint/renderer-winit-software", "slint/backend-winit"]
pico = [
    "slint/unsafe-single-threaded",
    "slint/libm",
    "rp-pico",
    "cortex-m",
    "cortex-m-rt",
    "alloc-cortex-m",
    "embedded-hal",
    "fugit",
    "st7789",
    "display-interface-spi",
    "embedded-graphics-core",
    "shared-bus",
    "panic-halt"
]


